; ModuleID = '/home/carl/AnghaBench/rofi/source/widgets/extr_listview.c_listview_set_state.c'
source_filename = "/home/carl/AnghaBench/rofi/source/widgets/extr_listview.c_listview_set_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*, i32)* @listview_set_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @listview_set_state(%struct.TYPE_3__* byval(%struct.TYPE_3__) align 8 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  store i32 %1, i32* %3, align 4
  %4 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = call i32 @WIDGET(i64 %5)
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @listview_set_style(i32 %6, i32 %7)
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 2
  %10 = load i64, i64* %9, align 8
  %11 = call i32 @WIDGET(i64 %10)
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @listview_set_style(i32 %11, i32 %12)
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %23

17:                                               ; preds = %2
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 1
  %19 = load i64, i64* %18, align 8
  %20 = call i32 @WIDGET(i64 %19)
  %21 = load i32, i32* %3, align 4
  %22 = call i32 @listview_set_style(i32 %20, i32 %21)
  br label %23

23:                                               ; preds = %17, %2
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = call i32 @WIDGET(i64 %25)
  %27 = call i32 @widget_queue_redraw(i32 %26)
  ret void
}

declare dso_local i32 @listview_set_style(i32, i32) #1

declare dso_local i32 @WIDGET(i64) #1

declare dso_local i32 @widget_queue_redraw(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
